# pypamm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.py  example.py  pyproject.toml  setup.py  test_quick_shift.py
.github/: README.md
.github/workflows/: build-wheels.yml  publish.yml  python-package.yml  release.yml
docs/: api.md  examples.md  generate_example_images.py  index.md
examples/: README.md  config.yaml  data_config.yaml  data_generator.py  example_config.yaml  generate_dataset.py  grid_selection_example.py  kde_example.py  mst_example.py  neighbor_graph_example.py  pamm_clustering_example.py  pipeline_example.py  quick_shift_example.py  quick_shift_graph_example.py  quickshift_example.py  test_mst_simple.py  tsne_visualization.py
examples/configs/: clustered.json  clustered.yaml  complex.json  complex.yaml  example.yaml  grid.yaml
examples/old_scripts/: neighbor_graph_example.py  test_mst_simple.py
src/pamm/: __init__.py
src/pypamm/: __init__.py  cluster_covariance.pxd  cluster_covariance_wrapper.py  distance_metrics.pxd  distance_metrics.pyx  distance_metrics_wrapper.py  grid_selection.pxd  grid_selection.pyx  grid_selection_wrapper.py  mst.pxd  mst.pyx  mst_wrapper.py  neighbor_graph.pxd  neighbor_graph.pyx  neighbor_graph_wrapper.py  quick_shift.pxd  quick_shift.pyx  quick_shift_wrapper.py
src/pypamm/clustering/: __init__.py  adjacency.py  cluster_covariance.pyx  cluster_covariance_wrapper.py  cluster_utils.pxd  cluster_utils.pyx  cluster_utils_wrapper.py  pamm.py  utils.pxd  utils.pyx  utils_wrapper.py
src/pypamm/density/: __init__.py  kde.pxd  kde.pyx  kde_wrapper.py
src/pypamm/lib/: __init__.py  _opx.pxd  _opx.pyx  distance.pxd  distance.pyx  distance_wrapper.py  neighbours.pxd  neighbours.pyx
tests/: conftest.py  test_cluster_covariance.py  test_distance_metrics.py  test_grid_selection.py  test_knn_graph.py  test_mst.py  test_mst_edge_cases.py  test_mst_integration.py  test_mst_wrapper.py  test_neighbor_graph.py  test_quick_shift.py  test_quick_shift_variants.py
tests/clustering/: test_adjacency.py  test_cluster_utils.py  test_pamm_clustering.py  test_utils.py
tests/density/: test_kde.py
tests/distance_metrics/: test_distance_metrics.py
tests/lib/: test_distance_metrics.py  test_neighbours.py  test_opx.py
