[tool.poetry]
name = "pypamm"
version = "0.1.0"
description = "Probabilistic Analysis of Molecular Motifs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pypamm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
cython = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "Cython>=3.0.0", "numpy>=2.0.0"]
build-backend = "poetry.core.masonry.api"
