[tool.poetry]
name = "pypamm"
version = "0.1.0"
description = "Probabilistic Analysis of Molecular Motifs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pypamm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.0.0"
cython = "3.0.12"
scipy = "^1.12.0"
pyyaml = "^6.0.2"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
setuptools = "^76.0.0"
matplotlib = ">=3.7.0,<3.10.0"
ruff = "^0.11.0"
pre-commit = "^4.1.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel", "Cython==3.0.12", "numpy==2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable linting and formatting
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

# Ignore specific rules
lint.ignore = ["UP006", "UP035"]

# Line length
line-length = 120

# Target Python version
target-version = "py310"

# Exclude files and directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pypamm"]
